--- a/egs/voicehome/doc/thesis/bib/thesis_bibliography.bib
+++ b/egs/voicehome/doc/thesis/bib/thesis_bibliography.bib
@@ -67,6 +67,14 @@
   year      = {2016}
 } 
 
+  @misc{wiki_json,
+  author = {{Wikipedia contributors}},
+  title  = {JSON --- {Wikipedia}{,} The Free Encyclopedia},
+  year   = {2021},
+  url    = {https://en.wikipedia.org/w/index.php?title=JSON&oldid=1023299487},
+  note   = {[Online; accessed 23-May-2021]}
+}
+
 @phdthesis{stanislav_petr_2020,
   title  = {Speech recognition of patients after total laryngectomy communicating by electrolarynx},
   school = {Západočeská univerzita v Plzni},
