--- a/egs/voicehome/doc/thesis/main.tex
+++ b/egs/voicehome/doc/thesis/main.tex
@@ -9,7 +9,7 @@
 \input{tex/sett/declaration_of_authorship}
 \input{tex/sett/quotation}
 \input{tex/sett/abstract}
-% \input{tex/sett/keywords}
+\input{tex/sett/keywords}
 % \keywordnames
 \input{tex/sett/acknowledgements}
 \input{tex/sett/lists}
