--- a/egs/voicehome/doc/thesis/tex/appx/app_modules_calls.tex
+++ b/egs/voicehome/doc/thesis/tex/appx/app_modules_calls.tex
@@ -35,6 +35,7 @@ The module responds to the following questions:
     \begin{itemize}
         \item "Světlo v obývacím pokoji rozsvíceno."
     \end{itemize} 
+    \newpage
     \item Turn off the light 1\\
     \textbf{Voice commands}
     \begin{itemize}
@@ -87,6 +88,7 @@ The module responds to the following questions:
     \begin{itemize}
         \item "Vývojová deska číslo dva zhasnuta."
     \end{itemize}
+    \newpage
     \item Turn on the onboard LED number 3\\
     \textbf{Voice commands}
     \begin{itemize}
@@ -194,6 +196,7 @@ The module responds to the following questions:
         \item "Průměrná vlhkost za poslední den."
         \item "Dnešní průměrná vlhkost."
     \end{itemize}
+    \newpage
     \textbf{Reply}
     \begin{itemize}
         \item "Vlhkost nebylo možné vypočíst."
@@ -243,6 +246,7 @@ The module responds to the following questions:
         \item "Vlhkost nebylo možné vypočíst."
         \item "Průměrná vlhkost za poslední týden je devět set devadesát."
     \end{itemize}
+    \newpage
     \item Voicekit answer average illuminance for the last week\\
     \textbf{Voice commands}
     \begin{itemize}
@@ -298,6 +302,7 @@ The module responds to the following questions:
     \begin{itemize}
         \item Časovač je vypnut
     \end{itemize}
+    \newpage
     \item Ask the server for today's day of the week\\
     \textbf{Voice commands}
     \begin{itemize}
@@ -353,6 +358,7 @@ The module responds to the following questions:
         \item Aktualizuj moduly
         \item Přenačti moduly
     \end{itemize}
+    \newpage
     \textbf{Reply}
     \begin{itemize}
         \item Moduly byly znovu načteny.
@@ -404,6 +410,7 @@ The module responds to the following questions:
         \item Dnešní předpověď
         \item Jak dnes bude?
     \end{itemize}
+    \newpage
     \textbf{Reply}
     \begin{itemize}
         \item Nebylo možno získat data ze serveru chmi.cz
@@ -448,6 +455,7 @@ The module responds to the following questions:
         \item Předpověď na středu
         \item Jak bude středu?
     \end{itemize}
+    \newpage
     \textbf{Reply}
     \begin{itemize}
         \item Nebylo možno získat data ze serveru chmi.cz
@@ -492,6 +500,7 @@ The module responds to the following questions:
         \item Předpověď na neděli
         \item Jak bude neděli?
     \end{itemize}
+    \newpage
     \textbf{Reply}
     \begin{itemize}
         \item Nebylo možno získat data ze serveru chmi.cz
