--- a/egs/voicehome/doc/thesis/tex/sett/abstract.tex
+++ b/egs/voicehome/doc/thesis/tex/sett/abstract.tex
@@ -5,6 +5,14 @@
 \begin{abstract} \label{chap_abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 
-The bachelor thesis aims to construct several electrical circuits of ESP8266, sensors and lights and develop voice-enabled smart home modules. The first step design a hardware solution and the physical implementation of individual sensors and lights with ESP8266. As next step are ESP8266 programmed and built engine as a software environment for data communication, data storage and voice-enabled modules. Furthermore, a VoiceKit is connected to the engine to allow a user to control modules by voice. The central part of the project is the web page visualizing all states of components, listed voice commands, currently uttered user commands, and graph data from sensors. The outcome of this project is a functional example use of modules in a basic smart home.
+The bachelor thesis aims to construct several electrical circuits of development board, sensors and lights and develop voice-enabled smart home modules. The first step design a hardware solution and the physical implementation of individual sensors and lights with development boards. As next step are development boards programmed and built \textit{engine} as a software environment for data communication, data storage and voice-enabled modules. Furthermore, a VoiceKit is connected to the \textit{engine} to allow a user to control modules by voice. The central part of the project is the web page visualizing all states of components, listed voice commands, currently uttered user commands, and graph data from sensors. The outcome of this project is a functional example use of modules in a basic smart home.
+
+    \begin{abstract_cz} \label{chap_abstract_cz}
+        % \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
+        
+        Tato bakalářská práce si klade za cíl zkonstruovat několik elektrických obvodů vývojové desky, senzorů a světel a vyvinout hlasové inteligentní domácí moduly. Prvním krokem je návrh hardwarového řešení a fyzická implementace jednotlivých senzorů a světel s vývojovými deskami. Jako další krok jsou vývojové desky naprogramovány a vytvořen \textit{engine} jako softwarové prostředí pro datovou komunikaci, ukládání dat a hlasové moduly. Dále je k \textit{engine} připojen VoiceKit, který umožňuje uživateli ovládat moduly hlasem. Významnou částí projektu je webová stránka zobrazující všechny stavy komponent, uvedené hlasové příkazy, aktuálně vyslovené uživatelské příkazy a data grafů ze senzorů. Výsledkem tohoto projektu je funkční ukázkové použití modulů v základní inteligentní domácnosti.
+        
+    \end{abstract_cz}
 
 \end{abstract}
+
