final fix - abstract, citation

--- a/egs/voicehome/doc/thesis/bib/thesis_bibliography.bib
+++ b/egs/voicehome/doc/thesis/bib/thesis_bibliography.bib
@@ -58,6 +58,15 @@
   author    = {Google}
 } 
 
+ @misc{voice_assistant_service,
+  title     = {How the Smart Home skill API works},
+  url       = {https://developer.amazon.com/en-GB/docs/alexa/smarthome/understand-the-smart-home-skill-api.html#how-the-smart-home-skill-api-works},
+  journal   = {Amazon},
+  publisher = {Beauchemin Chenelière éducation},
+  author    = {Robitaille, France and Pilinis, Denise and Mitchell, Julie and Reilly, Carmel and Brasch, Nicolas and Trussell-Cullen, Alan and Garneau, Johanne and Michaud, Denis and Drolet, Louise},
+  year      = {2008}
+} 
+
 @misc{mqtt_malý_2016,
   title     = {Protokol MQTT: komunikační standard pro IoT},
   url       = {https://www.root.cz/clanky/protokol-mqtt-komunikacni-standard-pro-iot/},
