--- a/egs/voicehome/doc/thesis/tex/sett/abstract.tex
+++ b/egs/voicehome/doc/thesis/tex/sett/abstract.tex
@@ -5,7 +5,7 @@
 \begin{abstract} \label{chap_abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 
-The bachelor thesis aims to construct several electrical circuits of development board, sensors and lights and develop voice-enabled smart home modules. The first step design a hardware solution and the physical implementation of individual sensors and lights with development boards. As next step are development boards programmed and built \textit{engine} as a software environment for data communication, data storage and voice-enabled modules. Furthermore, a VoiceKit is connected to the \textit{engine} to allow a user to control modules by voice. The central part of the project is the web page visualizing all states of components, listed voice commands, currently uttered user commands, and graph data from sensors. The outcome of this project is a functional example use of modules in a basic smart home.
+The bachelor thesis aims to construct several electrical circuits of development board, sensors and lights and develop voice-enabled smart home modules. The first step design a hardware solution and the physical implementation of individual sensors and lights with development boards. As the next step, the development boards are programmed and built \textit{engine} as a software environment for data communication, data storage and voice-enabled modules. Furthermore, a VoiceKit is connected to the \textit{engine} to allow a user to control modules by voice. The central part of the project is a web page visualizing all states of components, listed voice commands, currently uttered user commands, and graph data from sensors. The outcome of this project is a functional example use of modules in a basic smart home.
 
     \begin{abstract_cz} \label{chap_abstract_cz}
         % \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
