data collection, features and hw chapters drafted

--- a/egs/smartblinds/doc/bib/thesis_bibliography.bib
+++ b/egs/smartblinds/doc/bib/thesis_bibliography.bib
@@ -31,3 +31,39 @@
    author 		= {Bradley, Peter},
    url 			= {http://mind.ilstu.edu/}
 }
+
+@manual{ai-thinker:esp12e,
+  title        = {ESP-12E WiFi Module},
+  organization = {AI-Thinker team},
+  year         = {2015},
+  note         = {Version 1.0},
+}
+
+@manual{dallas:ds18b20,
+  title        = {DS18B20 -- Programmable Resolution 1-Wire Digital Thermometer},
+  organization = {Maxim Integrated Products, Inc.},
+  year         = {2019},
+  note         = {19-7487; Rev 6; 7/19},
+}
+
+@manual{adafruit:tsl2591,
+  title        = {Adafruit TSL2591 High Dynamic Range Digital Light Sensor},
+  organization = {Adafruit Industries},
+  year         = {2014}
+}
+
+@online{somfy:api,
+  organization = {Somfy},
+  title = {Somfy Open API Developer Portal | APIs \& Docs},
+  year = 2018,
+  url = {https://developer.somfy.com/apis-docs},
+  urldate = {2022-03-23}
+}
+
+@online{tetienne:pymfy,
+  author = {Thibaut Etienne},
+  title = {Somfy Open API},
+  year = 2021,
+  url = {https://github.com/tetienne/somfy-open-api#readme},
+  urldate = {2022-03-23}
+}
