minor changes of thesis template and structure

--- a/egs/smartblinds/doc/tex/sett/lists.tex
+++ b/egs/smartblinds/doc/tex/sett/lists.tex
@@ -15,14 +15,8 @@
 %%----------------------------------------------------------------------------------------
 %%	ABBREVIATIONS
 %%----------------------------------------------------------------------------------------
-
-\begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
-
-\textbf{AI} & \textbf{A}rtificial \textbf{I}ntelligence\\
-\textbf{ANN} & \textbf{A}rtificial \textbf{N}eural \textbf{N}etwork\\
-Your abbreviations...
-
-\end{abbreviations}
+\newpage
+\printglossary[type=\acronymtype]
 
 %%----------------------------------------------------------------------------------------
 %%	PHYSICAL CONSTANTS/OTHER DEFINITIONS
