--- a/egs/smartblinds/doc/tex/sett/title_page.tex
+++ b/egs/smartblinds/doc/tex/sett/title_page.tex
@@ -8,7 +8,7 @@
 
 \begin{titlepage}
 \begin{center}
-\includegraphics[width=0.4\textwidth]{zcu_logo_text.png} % University logo
+\includegraphics[width=0.8\textwidth]{Katedra kybernetiky_cmyk.pdf} % University logo
 %{\scshape\LARGE \univname\par}			 % University name
 \\\vspace{3cm}
 \textsc{\Large \ttype}\\[0.2cm] 	 % Thesis type
@@ -25,17 +25,17 @@
 \end{minipage}
 \begin{minipage}[t]{0.45\textwidth}
 \begin{flushright} \large
-\emph{Supervisor:} \\
+\emph{Vedoucí práce:} \\
 {\supname}
 \end{flushright}
 \end{minipage}\\[2.5cm]
  
-\large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
-\textit{in the}\\[0.4cm]
-%\groupname
-\deptname % Research group name and department name
+% \large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
+% \textit{in the}\\[0.4cm]
+% %\groupname
+% \deptname % Research group name and department name
 %\includegraphics[width=0.35\textwidth]{kky_logo.png} 				% Department logo
- \\\vspace{2cm}
+ ~\\\vspace{2cm}
 {\large \today} % Date
  
 \vfill
