--- a/egs/smartblinds/doc/tex/sett/bibliography.tex
+++ b/egs/smartblinds/doc/tex/sett/bibliography.tex
@@ -1,5 +1,5 @@
 \nocite{mcculloch:neuron}
-\printbibliography[heading=bibintoc, title={Bibliography}]		% Bibliography
+\printbibliography[heading=bibintoc, title={Bibliografie}]		% Bibliography
 %\printbibheading[heading=bibintoc,title={Bibliography}]
 %\printbibliography[type=book,heading=subbibliography,title={Book Sources}]
 %\printbibliography[type=article,heading=subbibliography,title={Article Sources}]
