--- a/egs/smartblinds/doc/tab/tab_features.tex
+++ b/egs/smartblinds/doc/tab/tab_features.tex
@@ -37,6 +37,6 @@
     \bottomrule
     \bottomrule
     \end{tabular}%
-    \caption[Příznakový vektor]{Příznakový vektor. Tabulka zachycuje 15 příznaků použitých pro automatické ovládání žaluzie, jejich označení v sytému a množiny očekávaných hodnot. Případné jednotky jsou uvedeny v hranatých závorkách za příznaky.}
+    \caption[Příznaky pro automatické ovládání žaluzie]{15 příznaků použitých pro automatické ovládání žaluzie, jejich označení v sytému a množiny očekávaných hodnot.}
   \label{tab:features}%
 \end{table}%
