--- a/egs/smartblinds/doc/tab/tab_topics.tex
+++ b/egs/smartblinds/doc/tab/tab_topics.tex
@@ -3,7 +3,7 @@
 \centering
     \begin{tabular}{l|l}
     \toprule
-    \multicolumn{1}{c|}{Příznak} & \multicolumn{1}{c}{Téma} \\
+    \multicolumn{1}{c|}{Příznak nebo stav} & \multicolumn{1}{c}{Téma} \\
     \midrule
     \midrule
     temp\_inside & smartblinds/temp/Vojta \\
