--- a/egs/smartblinds/doc/tex/sett/acronyms.tex
+++ b/egs/smartblinds/doc/tex/sett/acronyms.tex
@@ -9,3 +9,4 @@
 \newacronym{ffnn}{FFNN}{feed-forward neural network}
 \newacronym{lstm}{LSTM}{long short-term memory}
 \newacronym{mse}{MSE}{střední kvadratická odchylka (mean squared error)}
+\newacronym{api}{API}{aplikační rozhraní}
