regressors and gui chapters drafted, general fixes

--- a/egs/smartblinds/doc/bib/thesis_bibliography.bib
+++ b/egs/smartblinds/doc/bib/thesis_bibliography.bib
@@ -67,3 +67,59 @@
   url = {https://github.com/tetienne/somfy-open-api#readme},
   urldate = {2022-03-23}
 }
+
+@online{mongodb:mongodb,
+  organization = {MongoDB, Inc.},
+  title = {MongoDB Documentation},
+  year = 2021,
+  url = {https://www.mongodb.com/docs/},
+  urldate = {2022-04-20}
+}
+
+@online{keras:doc,
+  organization = {Keras},
+  title = {Keras API reference},
+  year = 2022,
+  url = {https://keras.io/api/},
+  urldate = {2022-04-21}
+}
+
+@online{apple:home,
+  organization = {Apple Inc.},
+  title = {Apple Home},
+  year = 2022,
+  url = {https://www.apple.com/ios/home/},
+  urldate = {2022-04-21}
+}
+
+@online{hass:hass,
+  organization = {Home Assistant},
+  title = {Home Assistant},
+  year = 2022,
+  url = {https://www.home-assistant.io/},
+  urldate = {2022-04-21}
+}
+
+@online{openhab:openhab,
+  organization = {OpenHAB Foundation},
+  title = {OpenHAB},
+  year = 2022,
+  url = {https://www.openhab.org/},
+  urldate = {2022-04-21}
+}
+
+@online{vercel:nextjs,
+  organization = {Vercel},
+  title = {Next.js},
+  year = 2022,
+  url = {https://nextjs.org/},
+  urldate = {2022-04-21}
+}
+
+@online{w3c:svg,
+  author = {Erik Dahlström and Patrick Dengler and Anthony Grasso and Chris Lilley and Cameron McCormack and Doug Schepers and Jonathan Watt},
+  title = {Somfy Open API},
+  year = 2011,
+  url = {https://www.w3.org/TR/SVG11/},
+  urldate = {2022-04-21}
+}
