--- a/egs/smartblinds/doc/tab/tab_ffnnhyper.tex
+++ b/egs/smartblinds/doc/tab/tab_ffnnhyper.tex
@@ -16,6 +16,6 @@
     \bottomrule
     \bottomrule
     \end{tabular}%
-    \caption[Prohledáváné parametry dopředné neuronové sítě]{Prohledáváné parametry dopředné neuronové sítě. Tabulka zachycuje 4 parametry neuronové sítě a jejího učení jejichž vzájemné kombinace se prohledávaly za účelem získání nejlepší z nich pro úlohu regrese hodnot nastavení venkovní žaluzie na základě 15 příznaků. Každá z hodnot parametru struktura sítě je seznam (ohraničený hranatými závorkami) o délce rovné počtu vrstev sítě z nichž každá má takový počet neuronů jako odpovídající prvek seznamu. \acrshort{mse} značí střední kvadratickou odchylku.}
+    \caption[Prohledáváné parametry dopředné neuronové sítě]{Prohledáváné parametry dopředné neuronové sítě. Tabulka zachycuje 4 parametry neuronové sítě a jejího učení jejichž vzájemné kombinace se prohledávaly za účelem získání nejlepší z nich pro úlohu regrese hodnot nastavení venkovní žaluzie na základě 15 příznaků. Hodnoty parametru struktura sítě jsou seznamy (v hranatých závorkách) počtu neuronů v jednotlivých vrstvách sítě. \acrshort{mse} značí střední kvadratickou odchylku.}
   \label{tab:ffnnhyper}%
 \end{table}%
