--- a/egs/smartblinds/doc/tex/sett/acronyms.tex
+++ b/egs/smartblinds/doc/tex/sett/acronyms.tex
@@ -10,3 +10,4 @@
 \newacronym{lstm}{LSTM}{long short-term memory}
 \newacronym{mse}{MSE}{střední kvadratická odchylka (mean squared error)}
 \newacronym{api}{API}{aplikační rozhraní}
+\newacronym{nn}{NS}{neuronová síť}
