--- a/egs/smartblinds/doc/tex/sett/preamble.tex
+++ b/egs/smartblinds/doc/tex/sett/preamble.tex
@@ -140,4 +140,6 @@ hidelinks,
 
 \input{tex/sett/acronyms.tex}
 
-\includeonly{tex/chap/chap_hardware.tex,tex/chap/chap_data_collection.tex,tex/chap/chap_features}
+\includeonly{tex/chap/chap_hardware.tex,tex/chap/chap_data_collection.tex,tex/chap/chap_features,tex/chap/chap_regressors.tex,tex/chap/chap_gui.tex}
+
+\newcommand{\draftfig}{false}
