--- a/egs/smartblinds/doc/tex/sett/thesis_info.tex
+++ b/egs/smartblinds/doc/tex/sett/thesis_info.tex
@@ -3,7 +3,7 @@
 %----------------------------------------------------------------------------------------
 
 % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
-\thesistitle{Automatické ovládání žaluzií s využitím strojového učení}{Automatic blinds control using machine learning}
+\thesistitle{Automatické ovládání žaluzií s~využitím strojového učení}{Automatic blinds control using machine learning}
 \thesistype{Bakalářská práce}{Bachelor's thesis}
 
 % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
